--- a/nx.json
+++ b/nx.json
@@ -34,6 +34,7 @@
     "f-list-page": { "tags": [] },
     "b-list": { "tags": [] },
     "f-analytics": { "tags": [] },
-    "b-analytics": { "tags": [] }
+    "b-analytics": { "tags": [] },
+    "ngrx": { "tags": [] }
   }
 }
