--- a/package.json
+++ b/package.json
@@ -56,10 +56,15 @@
     "@nestjs/platform-socket.io": "^7.6.15",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/websockets": "^7.6.15",
+    "@ngrx/effects": "^11.1.1",
+    "@ngrx/store": "^11.1.1",
+    "@ngrx/store-devtools": "^11.1.1",
     "@nrwl/angular": "11.6.0",
     "apollo-angular": "^2.4.0",
+    "apollo-link-error": "^1.1.13",
     "apollo-server-express": "^2.23.0",
     "bcrypt": "^5.0.1",
+    "chart.js": "^3.2.0",
     "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.1",
     "graphql-tools": "^7.0.4",
